# FunGameEngineTakeTwo

./: README.md  main.py  main_template.py  pyproject.toml  requirements.txt  setup.cfg  tox.ini
.github/workflows/: python-app.yml  rename_tool.yml  test-suite.yml
experimentation/: food.py  pc_snake.py  snake.py
experimentation/snake/: food.py  metagame.py  pc_snake.py  rules.py  snake.py
models/: context.py  floor.py  object.py  object_template.py  physics_model_generic.py
reference_code/: template.py
src/: camera.py  context.py  floor.py  object.py  object_template.py  physics_model_generic.py  player.py  player_controller.py  scene.py
src/GameThonic/: main.py
src/GameThonic/EngineBits/: __init__.py  camera.py  collision.py  context.py  floor.py  object.py  physics_model_generic.py  player.py  player_controller.py  scene.py
src/GameThonic/functions/: delay.py  direction.py  random_item_generation.py
src/events/: action.py  event.py
src/functions/: direction.py
src/gamethonic/: __init__.py  main.py
src/gamethonic/EngineBits/: scene.py
src/gamethonic/enginebits/: __init__.py  collision.py  context.py  floor.py  object.py  physics_model_generic.py  player.py  player_controller.py
src/gamethonic/rule_books/: __init__.py  metagame.py
src/models/: collision.py  material_props.py  physics.py
src/settings/: settings.py  setup.py
src/templates/: controller_template.py  event_loop_item.py  main_template.py  object_template.py  scene_template.py
tests/: test_actions.py  test_collision.py  test_top_level.py
(+34 files in other folders)
