[metadata]
name = gamethonic
description = A game engine built ontop of the python pygame package - should work eventually
author = Gregory Symington (GregSym)
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    gamethonic
    gamethonic.enginebits
    gamethonic.enginebits.constants
    gamethonic.enginebits.events
    gamethonic.enginebits.functions
    gamethonic.enginebits.models
    gamethonic.enginebits.settings
    gamethonic.enginebits.templates
    gamethonic.enginebits.meta
install_requires =
    pygame>=2
    numpy>=1.1
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
slapping = py.typed

[flake8]
max-line-length = 160